--- a/less/style.less
+++ b/less/style.less
@@ -1,30 +1,35 @@
+@import "common.less";
+@import "variables.less";
 html,
 body {
     margin: 0;
     padding: 0;
-    
 }
 
 * {
     box-sizing: border-box;
-        font-family: punctuation,"PingFangSC-Regular","Microsoft Yahei","sans-serif";
+    font-family: punctuation, "PingFangSC-Regular", "Microsoft Yahei", "sans-serif";
     -webkit-font-smoothing: subpixel-antialiased;
 }
-.clickable{
+
+.clickable {
     cursor: pointer;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.unselectable{
+
+.unselectable {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
 }
-button{
-   .clickable;
+
+button {
+    .clickable;
     .unselectable;
 }
+
 .root-header {
     color: white;
     height: 25px;
@@ -57,8 +62,7 @@ button{
     }
 }
 
-@input-height: 150px;
-@tools-height: 25px;
+
 .Tools-area {
     position: absolute;
     background-color: rgb(227, 237, 242);
@@ -79,21 +83,71 @@ button{
         width: 100%;
         border: 1px rgb(227, 237, 242) solid;
         resize: none;
+        padding-bottom: 40px;
     }
-    .send {        
-        @gap:7px;
+    .send-wrap {
+        @gap: 10px;
+        @border-radius:2px;
+        @bg:rgb(45, 145, 207);
+        @menu-head:20px;
         position: absolute;
         right: @gap;
-        bottom:@gap;
-        background: rgb(45,145,207);
-        color: white;
-        border: navajowhite;
-        padding: 5px 10px;
-//        width: 60px;
-        font-size: 14px;        
-        line-height: 100%;
-        .underline{
+        bottom: @gap;
+        .common{
+            background-color: @bg;
+            transition: background-color 150ms linear;
+            &:hover {
+                background-color: rgba(45, 145, 207, 0.7);
+            }
+            &:active{
+                transition-duration: 0ms;
+                background-color: rgba(25, 105, 147, 1);
+            }
+        }
+        .send {
+            .common;
+            float: left;
+            outline: none;
+            color: white;
+            border: navajowhite;
+            padding: 5px 7px;
+            //        width: 60px;
+            font-size: 14px;                    
+            border-top-left-radius: @border-radius;
+            border-bottom-left-radius: @border-radius;
+            margin-right: @menu-head;
+            padding-right: 7px;
+            .underline {
                 text-decoration: underline;
+            }
+            span{
+                vertical-align: middle;
+                display: inline-block;
+            }
+            
+        }
+        .menu-head {
+            .common;            
+            line-height: 28px;
+            border-top-right-radius: @border-radius;
+            border-bottom-right-radius: @border-radius;
+            width: @menu-head;
+            display: inline-block;
+            border-left: 1px rgba(255,255,255, 0.4) solid;
+            float: right;
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            font-size: 0px;
+            text-align: center;
+            .nothing{
+                width: 0px;                
+            }
+            .caret{
+                border-top-color: white;
+                margin-right: 1px;
+            }
         }
     }
 }
