prepare for manage.js

--- a/fe/less/style.less
+++ b/fe/less/style.less
@@ -1,5 +1,11 @@
 @import "common.less";
 @import "variables.less";
+@import "bootstrap/forms.less";
+@import "bootstrap/input-groups.less";
+@import "bootstrap/buttons.less";
+@import "bootstrap/button-groups.less";
+@import "bootstrap/variables.less";
+@import "bootstrap/mixins.less";
 html,
 body {
     margin: 0;
@@ -13,19 +19,23 @@ body {
 }
 
 
-
-@import "@{component}/Chat/style.less";
+@import "@{component}/chat/style.less";
+@import "@{component}/ChatMessage/style.less";
 @import "@{component}/Info/style.less";
 @import "@{component}/Input/style.less";
 @import "@{component}/LeftPanel/style.less";
 @import "@{component}/Menus/style.less";
-@import "@{component}/Root/style.less";
 @import "@{component}/RootHeader/style.less";
 @import "@{component}/RootMain/style.less";
 @import "@{component}/Tabs/style.less";
 @import "@{component}/Title/style.less";
 @import "@{component}/Tools/style.less";
 
+
+@import "@{component}/login/style.less";
+@import "@{component}/LoginForm/style.less";
+@import "@{component}/RegisterForm/style.less"; 
+@import "@{component}/CommonHeader/style.less";
 
 
 
