--- a/fe/less/common.less
+++ b/fe/less/common.less
@@ -16,6 +16,11 @@ button {
     .clickable;
     .unselectable;
 }
+input{
+    height: 30px;
+    border-radius: 3px;
+    border: 1px solid #aaa;
+}
 .caret {
     display: inline-block;
     width: 0;
@@ -27,4 +32,12 @@ button {
     border-left: 4px solid transparent;
     vertical-align: middle;
     margin: 0px;
+}
+.absolute-fill{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
