--- a/fe/less/common.less
+++ b/fe/less/common.less
@@ -1,3 +1,15 @@
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: punctuation, "PingFangSC-Regular", "Microsoft Yahei", "sans-serif";
+    -webkit-font-smoothing: subpixel-antialiased;
+}
+
 
 .clickable {
     cursor: pointer;
