finish auto generate frame

--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -10,3 +10,4 @@
 @import "@{componentPath}/chat/Info/Info.less";
 @import "@{componentPath}/chat/LeftPanel/LeftPanel.less";
 @import "@{componentPath}/chat/Tools/Tools.less";
+@import "@{componentPath}/chat/test/test.less";
