update login ui

--- a/fe/component/chat/RootHeader/RootHeader.less
+++ b/fe/component/chat/RootHeader/RootHeader.less
@@ -1,9 +1,5 @@
-.root-header {
-    color: white;
-    height: 25px;
-    background-color: rgb(45, 145, 207);
-    padding-left: 10px;
-    font-size: 15px;
-    line-height: 25px;
-    vertical-align: middle;
+@import "variables.less";
+@import "common.less";
+.chat-RootHeader-component{
+    
 }
