--- a/fe/component/chat/Tools/Tools.less
+++ b/fe/component/chat/Tools/Tools.less
@@ -1,8 +1,5 @@
-.Tools-area {
-    position: absolute;
-    background-color: rgb(227, 237, 242);
-    bottom: @input-height;
-    left: 0;
-    right: 0;
-    height: @tools-height;
+@import "variables.less";
+@import "common.less";
+.chat-Tools-component{
+    
 }
