--- a/fe/component/login/login.less
+++ b/fe/component/login/login.less
@@ -1,6 +1,6 @@
 
 #page-login.page{    
-    &:extend(.absolute-fill);
+    &:extend(.abs-fill);
     .page-max-width{
         max-width: 900px;
         margin: auto;
@@ -8,7 +8,7 @@
 //    background-color: #0769ab;
     overflow: auto; 
     >.main{
-        overflow: auto;
+        overflow: hidden;
         height: 400px;
         background-color: #0769ab;
         padding: 0 10px;
