--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -1,13 +1,14 @@
-@import "../common.less";
-                        @import "../variables.less";
-@import "@{componentPath}/chat/RootHeader/RootHeader.less";
-@import "@{componentPath}/chat/RootMain/RootMain.less";
-@import "@{componentPath}/chat/Tabs/Tabs.less";
-@import "@{componentPath}/chat/Title/Title.less";
-@import "@{componentPath}/chat/Menus/Menus.less";
-@import "@{componentPath}/chat/ChatMessage/ChatMessage.less";
-@import "@{componentPath}/chat/Input/Input.less";
-@import "@{componentPath}/chat/Info/Info.less";
-@import "@{componentPath}/chat/LeftPanel/LeftPanel.less";
-@import "@{componentPath}/chat/Tools/Tools.less";
-@import "@{componentPath}/chat/test/test.less";
+@import "common.less";
+@import "variables.less";
+@import "chat/chat.less";
+@import "chat/RootHeader/RootHeader.less";
+@import "chat/RootMain/RootMain.less";
+@import "chat/Tabs/Tabs.less";
+@import "chat/Title/Title.less";
+@import "chat/Menus/Menus.less";
+@import "chat/ChatMessage/ChatMessage.less";
+@import "chat/Input/Input.less";
+@import "chat/Info/Info.less";
+@import "chat/LeftPanel/LeftPanel.less";
+@import "chat/Tools/Tools.less";
+@import "chat/test/test.less";
