--- a/fe/less/page/common.less
+++ b/fe/less/page/common.less
@@ -1,3 +1,4 @@
-@import "../common.less";
-                        @import "../variables.less";
-@import "@{componentPath}/common/CommonHeader/CommonHeader.less";
+@import "common.less";
+@import "variables.less";
+@import "common/common.less";
+@import "common/CommonHeader/CommonHeader.less";
