--- a/fe/less/page/login.less
+++ b/fe/less/page/login.less
@@ -1,5 +1,6 @@
-@import "../common.less";
-                        @import "../variables.less";
-@import "@{componentPath}/common/CommonHeader/CommonHeader.less";
-@import "@{componentPath}/login/LoginForm/LoginForm.less";
-@import "@{componentPath}/login/RegisterForm/RegisterForm.less";
+@import "common.less";
+@import "variables.less";
+@import "login/login.less";
+@import "common/CommonHeader/CommonHeader.less";
+@import "login/LoginForm/LoginForm.less";
+@import "login/RegisterForm/RegisterForm.less";
