--- a/fe/tmpl/component.less
+++ b/fe/tmpl/component.less
@@ -1,4 +1,5 @@
-@import "../../../less/variables.less";
-.{{page}}-{{name}}-component.component{
+@import "variables.less";
+@import "common.less";
+.{{page}}-{{name}}-component{
     
 }
