--- a/fe/component/chat/ChatMessage/ChatMessage.less
+++ b/fe/component/chat/ChatMessage/ChatMessage.less
@@ -1,9 +1,5 @@
-.Chat-area {
-    border-left: 1px rgb(227, 237, 242) solid;
-    position: absolute;
-    right: 0;
-    bottom: @input-height + @tools-height;
-    top: 0;
-    left: 0;
-    overflow: auto;
+@import "variables.less";
+@import "common.less";
+.chat-ChatMessage-component{
+    
 }
