--- a/fe/component/chat/test/test.less
+++ b/fe/component/chat/test/test.less
@@ -1,4 +1,5 @@
-@import "../../../less/variables.less";
-.chat-test-component.component{
+@import "variables.less";
+@import "common.less";
+.chat-test-component{
     
 }
