--- a/fe/component/login/login.less
+++ b/fe/component/login/login.less
@@ -23,6 +23,7 @@
                 width: 70%;
             }
             >.form-area{
+                font-size: 16px;
             width: 30%;
             }
         }
