--- a/fe/componentbak/login/login.less
+++ b/fe/componentbak/login/login.less
@@ -23,7 +23,8 @@
                 width: 70%;
             }
             >.form-area{
-            width: 30%;
+                font-size: 16px; 
+                width: 30%;   
             }
         }
         
