--- a/fe/component/chat/RootMain/RootMain.less
+++ b/fe/component/chat/RootMain/RootMain.less
@@ -1,5 +1,9 @@
 @import "variables.less";
 @import "common.less";
-.chat-RootMain-component{
-    
+.chat-RootMain-component {
+    height: 100%;
+    width: 100%;
+
+
+    background-color: #f8f8f8;
 }
