--- a/fe/component/chat/Tools/Tools.less
+++ b/fe/component/chat/Tools/Tools.less
@@ -1,5 +1,10 @@
 @import "variables.less";
 @import "common.less";
 .chat-Tools-component{
-    
+        position: absolute;
+    background-color: rgb(227, 237, 242);
+    bottom: @input-height;
+    left: 0;
+    right: 0;
+    height: @tools-height;
 }
