--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -1,14 +1,10 @@
 @import "common.less";
 @import "variables.less";
 @import "chat/chat.less";
-@import "chat/RootHeader/RootHeader.less";
+@import "chat/LeftHeader/LeftHeader.less";
+@import "chat/RoomList/RoomList.less";
 @import "chat/RootMain/RootMain.less";
-@import "chat/Tabs/Tabs.less";
 @import "chat/Title/Title.less";
-@import "chat/Menus/Menus.less";
 @import "chat/ChatMessage/ChatMessage.less";
-@import "chat/Input/Input.less";
-@import "chat/Info/Info.less";
-@import "chat/LeftPanel/LeftPanel.less";
 @import "chat/Tools/Tools.less";
-@import "chat/test/test.less";
+@import "chat/Input/Input.less";
