--- a/fe/component/common/CommonHeader/CommonHeader.less
+++ b/fe/component/common/CommonHeader/CommonHeader.less
@@ -1,6 +1,10 @@
-@import "../../../less/variables.less";
+@import "variables.less";
+@import "common.less"; 
+.chat-root .common-CommonHeader-component.component{
+    
+}
 .common-CommonHeader-component.component{  
-    height: 70px;
+    .fill;
     text-align: center;
     padding: 0 10px;
     position: relative;
