--- a/fe/component/login/login.less
+++ b/fe/component/login/login.less
@@ -1,6 +1,9 @@
 
 #page-login.page{    
     &:extend(.abs-fill);
+    >.header-wrap{
+        height: 70px;
+    }
     .page-max-width{
         max-width: 900px;
         margin: auto;
