--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -1,6 +1,7 @@
 @import "common.less";
 @import "variables.less";
 @import "chat/chat.less";
+@import "common/CommonHeader/CommonHeader.less";
 @import "chat/LeftHeader/LeftHeader.less";
 @import "chat/RoomList/RoomList.less";
 @import "chat/RootMain/RootMain.less";
@@ -8,3 +9,5 @@
 @import "chat/ChatMessage/ChatMessage.less";
 @import "chat/Tools/Tools.less";
 @import "chat/Input/Input.less";
+@import "chat/Members/Members.less";
+@import "chat/Annunciator/Annunciator.less";
