--- a/fe/less/common.less
+++ b/fe/less/common.less
@@ -106,7 +106,10 @@ input {
 *[data-show="0"] {
     .hide;
 }
-
+.square(@size) {
+    width: @size;
+    height: @size;
+}
 .common-square(@size) {
     width: @size;
     height: @size;
