--- a/fe/component/chat/LeftHeader/LeftHeader.less
+++ b/fe/component/chat/LeftHeader/LeftHeader.less
@@ -26,6 +26,10 @@
     .group-area {
         color: white;
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 120px;
         .glyphicon {
             cursor: pointer;
             display: block;
@@ -41,4 +45,4 @@
         .abs-fill;
         top: auto;
     }
-} 
+}
