--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -4,6 +4,7 @@
 @import "common/CommonHeader/CommonHeader.less";
 @import "chat/LeftHeader/LeftHeader.less";
 @import "chat/RoomList/RoomList.less";
+@import "chat/Room/Room.less";
 @import "chat/RootMain/RootMain.less";
 @import "chat/Title/Title.less";
 @import "chat/ChatMessage/ChatMessage.less";
