--- a/fe/component/chat/RootMain/RootMain.less
+++ b/fe/component/chat/RootMain/RootMain.less
@@ -4,7 +4,7 @@
 .chat-RootMain-component {
     height: 100%;
     width: 100%;
-    background-color: #f8f8f8;
+    background-color: #fafafa;
     @top-height: @main-header-height;
     @right-width: 130px;
     >.top {
@@ -23,6 +23,12 @@
         top: @top-height;
         left: auto;
         width: @right-width;
-        border-left: 1px #aaa solid;
+        border-left: 1px #ccc solid;
+        .Bulletin-wrap{
+//            width: 100%;
+            height: 150px;
+            margin: 0 10px;
+            border-bottom: 1px solid #ccc;
+        }
     }
 }
