--- a/fe/less/page/chat.less
+++ b/fe/less/page/chat.less
@@ -11,4 +11,4 @@
 @import "chat/Tools/Tools.less";
 @import "chat/Input/Input.less";
 @import "chat/Members/Members.less";
-@import "chat/Annunciator/Annunciator.less";
+@import "chat/Bulletin/Bulletin.less";
