remove room-main

--- a/fe/component/chat/Members/Members.less
+++ b/fe/component/chat/Members/Members.less
@@ -1,5 +1,13 @@
 @import "variables.less";
 @import "common.less";
 .chat-Members-component{
-    
+    .fill;
+    .title{
+        padding: 10px;
+        font-size: 14px;
+        color: #333;
+        .cnt{
+            
+        }
+    }
 }
