--- a/fe/component/chat/Title/Title.less
+++ b/fe/component/chat/Title/Title.less
@@ -2,5 +2,10 @@
 @import "common.less";
 
 .chat-Title-component{
-    
+    .title{
+        margin: 0px;
+        line-height: 60px;
+        margin-left: 15px;
+        font-weight: normal;
+    }   
 }
