--- a/fe/component/chat/Bulletin/Bulletin.less
+++ b/fe/component/chat/Bulletin/Bulletin.less
@@ -16,6 +16,9 @@
         }
     }
     .content{
-        
+        color: rgb(138,138,138);
+        font-size: 13px;
+        margin-top: 10px;
+        margin-bottom: 0px;
     }
 }
