--- a/fe/component/chat/ChatMessage/ChatMessage.less
+++ b/fe/component/chat/ChatMessage/ChatMessage.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "common.less";
-.chat-ChatMessage-component{
-        border-left: 1px rgb(227, 237, 242) solid;
+.Chat-area {
+    border-left: 1px rgb(227, 237, 242) solid;
     position: absolute;
     right: 0;
     bottom: @input-height + @tools-height;
