--- a/fe/component/chat/Input/Input.less
+++ b/fe/component/chat/Input/Input.less
@@ -14,6 +14,7 @@
         border: none;
         resize: none;
         padding-bottom: 40px;
+        font-size: 14px;
     }
     .send-wrap {
         @gap: 10px;
