hot reload works

--- a/fe/component/chat/Members/Members.less
+++ b/fe/component/chat/Members/Members.less
@@ -13,7 +13,7 @@
         .member {
             position: relative;
             .avatar-wrap {
-                .square(30px);
+                .square(20px); 
                 .round;
                 vertical-align: middle;
                 background-color: white;
@@ -27,6 +27,7 @@
             line-height: 30px;
             vertical-align: middle;
             .name {
+                color:#666;
                 font-size: 10px;
                 width: 65px;                
                 display: inline-block;
