--- a/fe/component/common/CommonHeader/CommonHeader.less
+++ b/fe/component/common/CommonHeader/CommonHeader.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
 .common-CommonHeader-component.component {
     .fill;
     text-align: center;
