fix redux usage

--- a/fe/component/chat/Input/Input.less
+++ b/fe/component/chat/Input/Input.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .chat-Input-component {
     height: @input-height;
     position: absolute;
