--- a/fe/component/chat/Tools/Tools.less
+++ b/fe/component/chat/Tools/Tools.less
@@ -1,8 +1,9 @@
-@import "variables.less";
-@import "common.less";
-.chat-Tools-component{
-        position: absolute;
-    background-color: rgb(227, 237, 242);
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
+.chat-Tools-component {
+    position: absolute;
+//    background-color: rgb(227, 237, 242);
     bottom: @input-height;
     left: 0;
     right: 0;
