--- a/fe/component/common/CommonHeader/CommonHeader.less
+++ b/fe/component/common/CommonHeader/CommonHeader.less
@@ -1,7 +1,7 @@
 
 @import "../../../less/variables.less";
 @import "../../../less/common.less";
-.common-CommonHeader-component.component {
+[data-component="common-commonHeader"].component {
     .fill;
     text-align: center;
     padding: 0 10px;
