--- a/fe/component/chat/Bulletin/Bulletin.less
+++ b/fe/component/chat/Bulletin/Bulletin.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .chat-Bulletin-component{
     .fill;
     padding-top: 8px;
