--- a/fe/component/chat/ChatMessage/ChatMessage.less
+++ b/fe/component/chat/ChatMessage/ChatMessage.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .Chat-area {
     border-left: 1px rgb(227, 237, 242) solid;
     position: absolute;
