--- a/fe/component/chat/LeftHeader/LeftHeader.less
+++ b/fe/component/chat/LeftHeader/LeftHeader.less
@@ -1,7 +1,8 @@
-@import "variables.less";
-@import "common.less";
-.chat-LeftHeader-component {
-    background-color: rgb(47, 187, 222);
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+[data-component="chat-leftHeader"]{
+    background: -webkit-linear-gradient(45deg,#020031 0,#6d3353 100%);
+    background: linear-gradient(45deg,#020031 0,#6d3353 100%);
     width: 100%;
     height: 100%;
     text-align: center;
