--- a/fe/component/chat/Room/Room.less
+++ b/fe/component/chat/Room/Room.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .chat-Room-component {
     @height: 50px;
     height: @height;
