--- a/fe/component/chat/RoomList/RoomList.less
+++ b/fe/component/chat/RoomList/RoomList.less
@@ -1,6 +1,6 @@
-@import "variables.less";
-@import "common.less";
-@import "chat/chat.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .chat-RoomList-component {
     .fill;
     background-color: rgb(239, 239, 239);
