--- a/fe/component/chat/RootHeader/RootHeader.less
+++ b/fe/component/chat/RootHeader/RootHeader.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 .chat-RootHeader-component{
         color: white;
     height: 25px;
