--- a/fe/component/chat/Title/Title.less
+++ b/fe/component/chat/Title/Title.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import "../variables.less";
 
 .chat-Title-component{
     .title{
