adjust to webpack

--- a/fe/component/login/LoginForm/LoginForm.less
+++ b/fe/component/login/LoginForm/LoginForm.less
@@ -1,5 +1,6 @@
-@import "variables.less";
-@import "common.less";
+@import "../../../less/variables.less";
+@import "../../../less/common.less";
+@import (reference) "../../../less/bootstrap/bootstrap.less";
 .login-LoginForm-component {
     &[data-mode="signin"] {
         input[name="invite-code"],
